# rts-prototype

./: .gitignore  DESKTOP_BUILD.md  budget_design_philosophy.html  design_philosophy.html  deterministicReplayHarness.html  differences_budget_vs_bar.html  future_factions.txt  index.html  issues.txt  migration.html  migration_authoritative_host_to_deterministic_lockstep.html  optimization_for_deterministic_lockstep_and_removal_of_authoritative_server.txt  package-lock.json  package.json  performanceBottleneckHarness.html  rts_prototype_vs_BAR.txt  tsconfig.json  units_files_list.txt  vite.config.ts
docs/: bar-command-reference.md  command-ux-direction.md  dp-01-snapshot-cadence-regression.md  dp-02-snapshot-wire-instrumentation.md  dp-03-client-prediction-diagnostics.md  render-object-lod.md  snapshot-v2-wire-schema.md  snapshot-wire-budgets.md  wasm-migration-principle.md
public/: music.mid
rts-physics-wasm/: Cargo.toml
rts-physics-wasm/src/: lib.rs
rts-sim-wasm/: .gitignore  Cargo.toml  README.md  build.rs
rts-sim-wasm/.cargo/: config.toml
rts-sim-wasm/src/: air_drag.rs  body_pool.rs  combat_targeting.rs  damage.rs  deposits.rs  entity_meta.rs  entity_state.rs  generated_blueprint_schema.rs  lib.rs  messagepack.rs  motion.rs  pathfinder.rs  presentation.rs  projectile.rs  quaternion.rs  render_pose.rs  runtime.rs  snapshot.rs  spatial_grid.rs  terrain.rs  turret_spring.rs  unit_action.rs  unit_kinetics.rs
rts-sim-wasm/src/combat_targeting/: fsm.rs
rts-sim-wasm/src/snapshot/: envelope_emit.rs
scripts/: auditDeterminism.mjs  captureEntityLodGallery.mjs  commandBundleCodecProbe.ts  commandSchedulerProbe.ts  deterministicReplayBrowserHarness.mjs  deterministicReplayHarness.mjs  eagleCombatHarness.mjs  fixedStepProbe.ts  generateBlueprintSchemaTypes.mjs  headlessReplayCli.ts  headlessReplayFixtures.ts  hostDirectedValidationTest.mjs  hostDirectedValidationTest.ts  lorisShieldHarness.mjs  nondeterminismAudit.mjs  performanceBottleneckHarness.mjs  primitiveGeometryQualityAudit.mjs  probeProjectileWireV2.ts  simRuntimeProbe.ts  terrainStabilityBaseline.json  terrainStabilityHarness.mjs  turretMountContractValidation.mjs  turretMountContractValidation.ts  vite.headless-replay.config.mjs  vite.sim-runtime.config.mjs  worldHashProbe.ts
src/: App.vue  architecture.json  architectureConfig.ts  audioConfig.json  audioConfig.ts  backgroundBattleConfig.json  barThemes.json  barThemes.ts  battleBarConfig.json  battleBarConfig.ts  battleConfig.ts  beamConfig.json  browserRuntime.ts  buildConfig.json  buildConfig.ts  cameraConfig.json  captureConfig.json  captureConfig.ts  clientBarConfig.json  clientBarConfig.ts  clientConfig.ts  colorsConfig.json  colorsConfig.ts  colors_config.json  combatConfig.json  config.ts  constructionVisualConfig.json  constructionVisualConfig.ts  controlBarConfig.ts  demoConfig.json  demoConfig.ts  deterministicReplayHarnessBrowser.ts  economyConfig.json  emaConfig.json  entityHudConfig.json  entityHudConfig.ts  explosionConfig.json  explosionConfig.ts  fogConfig.json  fogConfig.ts  (+48 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: BarButton.vue  BarButtonGroup.vue  BarControlGroup.vue  BarDivider.vue  BarLabel.vue  CameraTutorial.vue  ChevronIcon.vue  CombatStatsGraph.vue  CombatStatsModal.vue  CommanderAvatar.vue  EntityLabPage.vue  GameCanvas.vue  (+57 more)
(+875 files in other folders)
